--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.4",
+    "dotenv": "^6.0.0",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.11.2",
