--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "copy-to-clipboard": "^3.0.6",
+    "exports-loader": "^0.7.0",
     "history": "^4.6.1",
+    "install": "^0.11.0",
     "knex": "^0.13.0",
     "local-storage-fallback": "^3.0.0",
+    "prunecluster": "^2.1.0",
     "query-string": "^4.3.4",
     "raw-loader": "^0.5.1",
     "react": "^15.5.4",
