--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
+    "react-select": "^2.4.1",
     "resetcss": "^1.0.3"
   },
   "devDependencies": {
