--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "build": "NODE_ENV=production rm -rf dist/* && webpack",
     "start": "webpack-dev-server",
     "lint": "eslint . --ext jsx,js",
-    "deploy-staging": "NODE_ENV=production GITHUB_PAGES_FOLDER=true rm -rf dist/* && webpack --output-public-path='/care-international/' && gh-pages -d dist"
+    "deploy-staging": "NODE_ENV=production GITHUB_PAGES_FOLDER=true rm -rf dist/* && webpack --output-public-path='/care-international/' && gh-pages -d dist",
+    "deploy-local": "NODE_ENV=production GITHUB_PAGES_FOLDER=true rm -rf dist/* && webpack && gh-pages -d dist"
   }
 }
